force-app/main/default/objects/Job_Broadcast__c/Job_Broadcast__c.object-meta.xml
<CustomObject>
    <label>Job Broadcast</label>
    <nameField>
        <label>ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Job Broadcasts</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>