force-app/main/default/objects/Job_Broadcast__c/fields/Broadbean_Posting__c.field-meta.xml
<CustomField>
    <fullName>Broadbean_Posting__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Broadbean Posting</label>
    <type>Checkbox</type>
</CustomField>