force-app/main/default/objects/Job_Broadcast__c/fields/Broadcasted__c.field-meta.xml
<CustomField>
    <fullName>Broadcasted__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Broadcasted</label>
    <type>Checkbox</type>
</CustomField>