force-app/main/default/objects/Job_Broadcast__c/fields/Broadcasted_By__c.field-meta.xml
<CustomField>
    <fullName>Broadcasted_By__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Broadcasted By</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Job_Broadcasts</relationshipName>
    <type>Lookup</type>
</CustomField>