force-app/main/default/objects/Job_Broadcast__c/fields/Idibu_Job_Id__c.field-meta.xml
<CustomField>
    <fullName>Idibu_Job_Id__c</fullName>
    <label>Idibu Job Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>