force-app/main/default/objects/Job_Broadcast__c/fields/Job_Board_Name__c.field-meta.xml
<CustomField>
    <fullName>Job_Board_Name__c</fullName>
    <label>Job Board Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>