force-app/main/default/objects/Job_Broadcast__c/fields/Job_Board_Solution__c.field-meta.xml
<CustomField>
    <fullName>Job_Board_Solution__c</fullName>
    <label>Job Board Solution</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>