force-app/main/default/objects/Job_Broadcast__c/fields/Jobs__c.field-meta.xml
<CustomField>
    <fullName>Jobs__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Jobs</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Job_Broadcasts1</relationshipName>
    <type>Lookup</type>
</CustomField>