force-app/main/default/objects/Job_Broadcast__c/fields/Last_Broadcasted__c.field-meta.xml
<CustomField>
    <fullName>Last_Broadcasted__c</fullName>
    <label>Last Broadcasted</label>
    <length>255</length>
    <type>Text</type>
</CustomField>