force-app/main/default/objects/Job_Broadcast__c/fields/Posting_End_Date__c.field-meta.xml
<CustomField>
    <fullName>Posting_End_Date__c</fullName>
    <label>Posting End Date</label>
    <type>Date</type>
</CustomField>