force-app/main/default/objects/Job_Broadcast__c/fields/Posting_Queue_ID__c.field-meta.xml
<CustomField>
    <fullName>Posting_Queue_ID__c</fullName>
    <label>Posting Queue ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>