force-app/main/default/objects/Job_Broadcast__c/fields/Remaining_Quota__c.field-meta.xml
<CustomField>
    <fullName>Remaining_Quota__c</fullName>
    <label>Remaining Quota</label>
    <length>255</length>
    <type>Text</type>
</CustomField>